--- a/Sass/pages/index.scss
+++ b/Sass/pages/index.scss
@@ -14,7 +14,7 @@ header {
     box-sizing: border-box;
     background-color: white;
     width: 60%;
-    height: 35px;
+    height: 70px;
     color: $fifth-color;
     margin: 0px auto;
 
@@ -67,5 +67,60 @@ header {
         gap: 40px;
       }
     }
+  }
+}
+
+.main-content {
+  box-sizing: border-box;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  max-width: 70%;
+  margin: 0 auto;
+  padding: 60px 0px;
+
+  h1 {
+    color: #000;
+    padding: 10px 0px;
+    padding-bottom: 3px;
+    font-size: 30px;
+    font-family: "Heebo", sans-serif;
+    font-weight: 900;
+  }
+  h3 {
+    color: #7b7b7b;
+    font-size: 20px;
+    padding-bottom: 10px;
+    font-family: "Zen Loop", cursive;
+  }
+  p {
+    padding: 6px 0px;
+    text-align: justify;
+    font-size: 16px;
+    font-family: "Heebo", sans-serif;
+  }
+}
+
+footer {
+  .footer-content {
+    background-color: $primary-color;
+    width: 100%;
+    height: 40px;
+    font-family: "Heebo", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    margin-top: 2.3%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    color: #7b7b7b;
+  }
+
+  a {
+    text-decoration: none;
+    color: #7b7b7b;
   }
 }
