--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -1,6 +1,12 @@
 // Arquivo Principal, fica toda a organização de imports do seu projeto.
 // Os imports seguem hierarquias, como você vai utilizar as cores no estilo da sua página inicial, por isso a importação das cores vem antes, caso contrário, as referências as variáveis no seu "index.scss" não iriam funcionar
 
+//IMPORT FONTES
+//fonte h1
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;800;900&family=Lato:wght@300;400;700&display=swap");
+//fonte h3 e footer
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Zen+Loop&display=swap");
+
 // IMPORT COLORS
 @import "./colors/colors.scss";
 
