--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;800;900&family=Lato:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Zen+Loop&display=swap");
 * {
   margin: 0px;
   padding: 0px;
@@ -13,7 +15,7 @@ header .nav {
   box-sizing: border-box;
   background-color: white;
   width: 60%;
-  height: 35px;
+  height: 70px;
   color: black;
   margin: 0px auto;
 }
@@ -59,6 +61,57 @@ header .nav .nav-content ul {
   list-style: none;
   display: flex;
   gap: 40px;
+}
+
+.main-content {
+  box-sizing: border-box;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  max-width: 70%;
+  margin: 0 auto;
+  padding: 60px 0px;
+}
+.main-content h1 {
+  color: #000;
+  padding: 10px 0px;
+  padding-bottom: 3px;
+  font-size: 30px;
+  font-family: "Heebo", sans-serif;
+  font-weight: 900;
+}
+.main-content h3 {
+  color: #7b7b7b;
+  font-size: 20px;
+  padding-bottom: 10px;
+  font-family: "Zen Loop", cursive;
+}
+.main-content p {
+  padding: 6px 0px;
+  text-align: justify;
+  font-size: 16px;
+  font-family: "Heebo", sans-serif;
+}
+
+footer .footer-content {
+  background-color: #fcec04;
+  width: 100%;
+  height: 40px;
+  font-family: "Heebo", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  margin-top: 2.3%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  color: #7b7b7b;
+}
+footer a {
+  text-decoration: none;
+  color: #7b7b7b;
 }
 
 /*# sourceMappingURL=style.css.map */
