--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -3,12 +3,157 @@
 
 //IMPORT FONTES
 //fonte h1
-@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;800;900&family=Lato:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700;800;900&family=Lato:wght@300;400;700&display=swap");
 //fonte h3 e footer
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Zen+Loop&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;600;700;800;900&family=Zen+Loop&display=swap");
 
 // IMPORT COLORS
 @import "./colors/colors.scss";
 
 // IMPORT INDEX.SCSS
 @import "./pages/index.scss";
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+header {
+  .linhaamarela {
+    margin: 0px auto;
+    background-color: $primary-color;
+    width: auto;
+    height: 8px;
+  }
+  .nav {
+    box-sizing: border-box;
+    background-color: white;
+    width: 60%;
+    height: 70px;
+    color: $fifth-color;
+    margin: 0px auto;
+
+    .item {
+      font-family: "Heebo", sans-serif;
+      font-weight: 500;
+
+      a {
+        text-decoration: none;
+        color: inherit;
+        cursor: pointer;
+      }
+      a:hover {
+        color: $second-color;
+        transition: 500ms;
+        font-weight: 600;
+      }
+    }
+
+    .socialmedia {
+      position: absolute;
+      top: 2%;
+      left: 3%;
+
+      p {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Heebo", sans-serif;
+        font-size: 12px;
+      }
+
+      img {
+        width: 25px;
+        height: 25px;
+        padding: 5px 5px;
+      }
+    }
+
+    .btn {
+      background-color: $third-color;
+      padding: 10px;
+      border-radius: 20px;
+    }
+
+    .btn-pedido {
+      position: absolute;
+      margin-left: 65%;
+      margin-top: 1%;
+      color: $primary-color;
+      text-decoration: none;
+      font-family: "Heebo", sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      box-shadow: 0px 4px 4px rgba(155, 151, 151, 0.25);
+    }
+
+    .btn-pedido:hover {
+      background-color: $second-color;
+      transition: 600ms;
+      color: white;
+    }
+
+    .nav-content {
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0px 4px 4px rgba(155, 151, 151, 0.25);
+      border-radius: 0px 0px 120px 120px;
+      font-size: 16px;
+
+      .logo {
+        width: 30%;
+        max-width: 160px;
+        height: 70px;
+        background-color: $primary-color;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0px 0px 15px 15px;
+        margin: 0px 15px;
+
+        img {
+          width: 40px;
+          height: 60px;
+        }
+      }
+
+      ul {
+        list-style: none;
+        display: flex;
+        gap: 40px;
+      }
+    }
+  }
+}
+
+footer {
+  .footer-content {
+    background-color: $primary-color;
+    width: 100%;
+    height: 40px;
+    font-family: "Heebo", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    margin-top: 2.3%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    color: #7b7b7b;
+  }
+
+  a {
+    text-decoration: none;
+    color: #7b7b7b;
+  }
+}
+
+@media (max-width: 1020) {
+}
+@media (max-width: 900px) {
+}
+@media (max-width: 768) {
+}
