Adicionado as meedia query até 900px do nav

--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -3,7 +3,7 @@
 
 //IMPORT FONTES
 //fonte h1
-@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700;800;900&family=Lato:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;800;900&family=Lato:wght@300;400;700&display=swap");
 //fonte h3 e footer
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;600;700;800;900&family=Zen+Loop&display=swap");
 
@@ -151,9 +151,56 @@ footer {
   }
 }
 
-@media (max-width: 1020) {
+@media (max-width: 1020px) {
+  header {
+    .nav {
+      .nav-content {
+        .logo {
+          position: relative;
+          margin: 0px 15px;
+        }
+      }
+      .item {
+        font-size: 14px;
+        font-family: "Heebo", sans-serif;
+        font-weight: 500;
+      }
+    }
+  }
+}
+@media (max-width: 940px) {
+  header {
+    .nav {
+      .nav-content {
+        .item {
+          font-size: 12px;
+        }
+      }
+
+      .btn-pedido {
+        margin-left: 63%;
+        margin-top: 2%;
+      }
+    }
+  }
 }
 @media (max-width: 900px) {
+  header {
+    .logo {
+      img {
+        width: 10px;
+      }
+    }
+    .item {
+      font-size: 12px;
+    }
+  }
 }
-@media (max-width: 768) {
+@media (max-width: 768px) {
+  header {
+    .nav {
+      .nav-content {
+      }
+    }
+  }
 }
