--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -27,7 +27,6 @@ header {
   .nav {
     box-sizing: border-box;
     background-color: white;
-    width: 60%;
     height: 70px;
     color: $fifth-color;
     margin: 0px auto;
@@ -76,7 +75,7 @@ header {
 
     .btn-pedido {
       position: absolute;
-      margin-left: 65%;
+      margin-left: 85%;
       margin-top: 1%;
       color: $primary-color;
       text-decoration: none;
@@ -100,17 +99,20 @@ header {
       box-shadow: 0px 4px 4px rgba(155, 151, 151, 0.25);
       border-radius: 0px 0px 120px 120px;
       font-size: 16px;
+      width: 60%;
+      margin: 0% 20%;
 
       .logo {
-        width: 30%;
-        max-width: 160px;
+        width: 40%;
+        max-width: 150px;
         height: 70px;
         background-color: $primary-color;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         border-radius: 0px 0px 15px 15px;
-        margin: 0px 15px;
+        margin: 0px 5%;
 
         img {
           width: 40px;
