--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -180,7 +180,7 @@ footer {
       }
 
       .btn-pedido {
-        margin-left: 63%;
+        margin-left: 82%;
         margin-top: 2%;
       }
     }
@@ -188,21 +188,107 @@ footer {
 }
 @media (max-width: 900px) {
   header {
-    .logo {
-      img {
-        width: 10px;
+    .nav {
+      .nav-content {
+        .logo {
+          max-width: 130px;
+          img {
+            width: 35px;
+            height: 45px;
+          }
+        }
       }
     }
+
     .item {
+      font-size: 12px;
+    }
+  }
+}
+@media (max-width: 800px) {
+  header {
+    .nav {
+      height: 40px;
+      a {
+        font-size: 11px;
+      }
+      .socialmedia {
+        top: 3%;
+
+        p {
+          font-size: 10px;
+        }
+
+        img {
+          width: 18px;
+          height: 18px;
+        }
+      }
+
+      .btn-pedido {
+        font-size: 10px;
+      }
+      .nav-content {
+        .logo {
+          max-width: 120px;
+          height: 50px;
+          img {
+            width: 25px;
+            height: 40px;
+          }
+        }
+      }
+    }
+  }
+  footer {
+    .footer-content {
+      height: 30px;
       font-size: 12px;
     }
   }
 }
 @media (max-width: 768px) {
   header {
+    .linhaamarela {
+      display: none;
+    }
     .nav {
-      .nav-content {
+      .socialmedia {
+        top: 2%;
+        p {
+          display: none;
+        }
+        img {
+          width: 15px;
+          height: 15px;
+        }
       }
+      .btn-pedido {
+        margin-top: 0px;
+        top: 1.5%;
+        padding: auto;
+      }
+      .nav-content {
+        border-radius: 0px;
+        width: 100%;
+        margin: 0px;
+        background-color: $primary-color;
+
+        .logo {
+          max-width: 100px;
+        }
+
+        ul {
+          gap: 20px;
+        }
+      }
+    }
+  }
+
+  footer {
+    .footer-content {
+      height: 30px;
+      font-size: 12px;
     }
   }
 }
