--- a/css/style.css
+++ b/css/style.css
@@ -83,10 +83,10 @@ header .nav .btn {
   background-color: #e84045;
   padding: 10px;
   border-radius: 20px;
+  margin-left: 0px;
 }
 header .nav .btn-pedido {
   position: absolute;
-  margin-left: 85%;
   margin-top: 1%;
   color: #fcec04;
   text-decoration: none;
@@ -237,7 +237,6 @@ footer a {
   header .nav .btn-pedido {
     margin-top: 0px;
     top: 1.5%;
-    padding: auto;
   }
   header .nav .nav-content {
     border-radius: 0px;
@@ -255,6 +254,18 @@ footer a {
   footer .footer-content {
     height: 30px;
     font-size: 12px;
+  }
+}
+@media (max-width: 600px) {
+  header .nav .socialmedia {
+    display: none;
+  }
+  header .nav .btn-pedido {
+    margin-left: 5%;
+    top: 1%;
+  }
+  header .nav-content ul li {
+    display: none;
   }
 }
 
