--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -24,6 +24,7 @@ header {
     width: auto;
     height: 8px;
   }
+
   .nav {
     box-sizing: border-box;
     background-color: white;
@@ -76,7 +77,7 @@ header {
 
     .btn-pedido {
       position: absolute;
-      // margin-left: 85%;
+      margin-left: 85%;
       margin-top: 1%;
       color: $primary-color;
       text-decoration: none;
@@ -126,6 +127,9 @@ header {
         display: flex;
         gap: 40px;
       }
+    }
+    #nav-burguer {
+      display: none;
     }
   }
 }
@@ -303,11 +307,26 @@ footer {
         margin-left: 5%;
         top: 1%;
       }
-    }
+      .nav-content {
+        ul li {
+          display: none;
+        }
+      }
+      #nav-burguer {
+        display: block;
+        position: absolute;
+        margin-left: 85%;
+        top: 1rem;
 
-    .nav-content {
-      ul li {
-        display: none;
+        ul {
+          list-style: none;
+          display: none;
+          a {
+            text-decoration: none;
+            color: inherit;
+            cursor: pointer;
+          }
+        }
       }
     }
   }
