--- a/css/style.css
+++ b/css/style.css
@@ -274,8 +274,8 @@ footer a {
   header .nav #nav-burguer {
     display: block;
     position: absolute;
-    margin-left: 85%;
     top: 1rem;
+    right: 5%;
   }
   header .nav #nav-burguer ul {
     list-style: none;
@@ -285,6 +285,11 @@ footer a {
     text-decoration: none;
     color: inherit;
     cursor: pointer;
+  }
+  header .nav #nav-burguer.active ul {
+    display: block;
+    margin-top: 1rem;
+    right: 50%;
   }
 }
 
