--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -13,6 +13,9 @@
 // IMPORT INDEX.SCSS
 @import "./pages/index.scss";
 
+//IMPORT AROMAS.SCSS
+@import "./pages/aromas.scss";
+
 * {
   margin: 0px;
   padding: 0px;
@@ -134,9 +137,12 @@ header {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+
   .footer-content {
     background-color: $primary-color;
-    width: 100%;
     height: 40px;
     font-family: "Heebo", sans-serif;
     font-weight: 400;
@@ -144,8 +150,8 @@ footer {
     position: relative;
     bottom: 0;
     left: 0;
-    margin-top: 2.3%;
-    display: grid;
+    // margin-top: 2.3%;
+    display: flex;
     justify-content: center;
     align-items: center;
     color: #7b7b7b;
@@ -208,6 +214,12 @@ footer {
       font-size: 12px;
     }
   }
+
+  footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
 }
 @media (max-width: 800px) {
   header {
@@ -259,6 +271,9 @@ footer {
   }
 
   footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     .footer-content {
       height: 30px;
       font-size: 12px;
@@ -303,6 +318,9 @@ footer {
   }
 
   footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     .footer-content {
       height: 30px;
       font-size: 12px;
@@ -412,6 +430,7 @@ footer {
     }
   }
   .main-content {
+    padding: 30px 0;
     h1 {
       font-size: 18px;
     }
@@ -421,5 +440,10 @@ footer {
     p {
       font-size: 12px;
     }
+  }
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
   }
 }
